--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="api_key_string">AIzaSyBaVhxYfaJeofPw1Pz1hPtR3tp6HsLoAgw</string>
+    <string name="route_mode_enabled">ROUTE MODE: ENABLED</string>
 </resources>
